src/test/deca/codegen/invalid/OperationSurVarNonInit6.deca
/* Description:
    Tester des opérations arithmétiques avec des variables non initialisée

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
  boolean x;
  boolean a = (true || x);
}
